# TurboOCR

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/turbo_ocr/decode/: nvjpeg_decoder.h
include/turbo_ocr/detection/: paddle_det.h
include/turbo_ocr/kernels/: kernels.h
include/turbo_ocr/layout/: layout_types.h
include/turbo_ocr/pipeline/: gpu_pipeline_pool.h
include/turbo_ocr/server/: env_utils.h  grpc_response_mode.h  grpc_service.h  server_config.h
src/detection/: paddle_det.cpp
src/kernels/: jfa.cu  kernels.cu
src/layout/: cpu_paddle_layout.cpp  paddle_layout.cpp
src/pipeline/: ocr_pipeline.cpp
src/routes/: image_routes.cpp
src/server/: cpu_main.cpp  main.cpp
tests/cpp/: test_server_config.cpp
tests/regression/: run_matrix.sh  test_endpoint_matrix.py
tools/: diff_ccl.cpp  test_nvjpeg_race.cpp
